# envoy-ai-mesh

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  test-hooks.sh
certificates/: schema.json
conf/: example.nginx.conf  nginx.conf  nginx.conf.backup.20251201_072551  nginx.conf.prod
config/: config.json  config.yaml
demo/agent-to-agent/: attack.yaml
demo/agent-to-tool/: attack.yaml
demo/multi-agent-chain/: README.md
demo/user-to-agent/: attack.yaml
docker/: docker-compose.yaml
docker/configs/: ai-guard-envoy.yaml  interceptor.yaml  otel-collector.yaml
envoy/: envoy.yaml
k8s/: configmap.yaml  deployment.yaml  service.yaml
kubernetes/: kind-cluster.yaml  setup-kind.sh
kubernetes/configmaps/: ai-guard-default-cert.yaml  ai-guard-default-policy.yaml  ai-guard-envoy-config.yaml
kubernetes/kyverno/: ai-guard-injection-policy.yaml  network-policy.yaml  sidecar-injection-policy.yaml  stdio-block-policy.yaml
kubernetes/mock-workload/: deployment.yaml
mock-agent/: Dockerfile  mock_agent.py
njs/: filter.js
njs/lib/: config-loader.js  hook-dispatcher.js  plugin-executor.js  plugin-registry.js  router.js  yaml-parser.js
njs/plugins/: pii.js  (+1 more)
policies/: default-policy.yaml  enterprise-strict.yaml
scripts/: ai-guard.ps1  devenv.sh  yaml-to-json.py
wasm-filter/: Cargo.toml
wasm-filter/src/: config.rs  lib.rs  telemetry.rs
wasm-filter/src/governance/: body_scanner.rs  mod.rs  pii_redaction.rs  prompt_injection.rs  rate_limiter.rs  token_counter.rs
wasm-filter/src/protocols/: mod.rs
wasm-filter/src/protocols/a2a/: mod.rs  security.rs  validator.rs
wasm-filter/src/protocols/mcp/: http.rs  jsonrpc.rs  mod.rs  sse.rs  stdio_detect.rs  websocket.rs
wasm-filter/src/streaming/: mod.rs  pattern_fsm.rs  ring_buffer.rs  utf8_buffer.rs
