[package]
name = "ai-guardrail-filter"
version = "0.1.0"
edition = "2021"
authors = ["AI Mesh Team"]
description = "Envoy Wasm filter for AI prompt injection detection"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
proxy-wasm = "0.2.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"

# Required for wasm32-wasi target
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os"]
